examples/test/testpolicy8637.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8637
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key27: value5
      key10: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value16
          key28: value9
          key14: value37
      podSelector:
        matchLabels:
          key49: value27
